--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <button>search</button>
     </form>
     <div></div>
-    <p><a href="https://github.com/often/repos" target="_blank" rel="noopener">source code</a> &mdash; <a href="LICENSE" target="_blank" rel="noopener">0BSD</a></p>
+    <p>
+      <a href="https://github.com/often/repos" target="_blank" rel="noopener">source code</a>
+      &mdash;
+      <a href="LICENSE">0BSD</a>
+    </p>
   </body>
 </html>
